# omni-Neural-Network-Library

./: .gitignore  LICENSE  full_requirements.txt  model.py  omni_requirements.txt  pyproject.toml  readme.md  test_run.py  train_mnist.py
code/: model.py  omni.py
code/test/: sgd_test.py
model/: omni_mnist.md  tf_model.keras
playground/mnist/: play.py  test_mnist.py  train_mnist.py
playground/mnist/model/: omni_mnist.model
src/archive/: logic.py
src/omni/: __init__.py  activations.py  layers.py  logic.py  model.py  network.py  utils.py
src/omni.egg-info/: PKG-INFO  SOURCES.txt
